Closed Bug 1646542 Opened 4 years ago Closed 4 years ago

Fix GetInProcessParent usage in nsFocusManager::IsSameOrAncestor

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Fission Milestone M6b
Tracking Status
firefox80 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

It doesn't handle in-process ancestor windows with OOP interstitials.

Severity: -- → S3
Pushed by maglione.k@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/67c817715469
Fix GetInProcessParent usage in IsSameOrAncestor. r=nika
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Regressions: 1653477
Regressions: 1427811
No longer regressions: 1427811
Fission Milestone: --- → M6b
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: