Bug 1646542: Fix GetInProcessParent usage in IsSameOrAncestor. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D80097